--- a/dialog.html
+++ b/dialog.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Text based input box using jQuery Terminal</title>
-    <link href="../css/jquery.terminal-src.css" rel="stylesheet"/>
+    <link href="css/jquery.terminal-src.css" rel="stylesheet"/>
     <script src="https://unpkg.com/js-polyfills/keyboard.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="dialog.js"></script>
     <link href="dialog.css" rel="stylesheet"/>
-    <script src="../js/jquery.terminal-src.js"></script>
+    <script src="js/jquery.terminal-src.js"></script>
     <style>
      .dialog {
          --size: 1.5;
