--- a/multiple-interpreters-demo.html
+++ b/multiple-interpreters-demo.html
@@ -5,10 +5,10 @@
     <title>JSON-RPC Demo for JQuery Terminal Emulator</title>
     <meta name="author" content="Jakub Jankiewicz - jcubic&#64;onet.pl"/>
     <meta name="Description" content="Demonstration for JQuery Terminal Emulator using call automaticly JSON-RPC service (in php) with authentication."/>
-    <script src="../js/jquery-1.7.1.min.js"></script>
-    <script src="../js/jquery.mousewheel-min.js"></script>
-    <script src="../js/jquery.terminal.min.js"></script>
-    <link href="../css/jquery.terminal.min.css" rel="stylesheet"/>
+    <script src="js/jquery-1.7.1.min.js"></script>
+    <script src="js/jquery.mousewheel-min.js"></script>
+    <script src="js/jquery.terminal.min.js"></script>
+    <link href="css/jquery.terminal.min.css" rel="stylesheet"/>
     <script src="https://unpkg.com/js-polyfills/keyboard.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
