--- a/rpc-demo.html
+++ b/rpc-demo.html
@@ -6,9 +6,9 @@
     <meta name="author" content="Jakub Jankiewicz - jcubic&#64;onet.pl"/>
     <meta name="Description" content="Demonstration for JQuery Terminal Emulator using call automaticly JSON-RPC service (in php) with authentication."/>
     <script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
-    <script src="../js/jquery.mousewheel-min.js"></script>
-    <script src="../js/jquery.terminal.min.js"></script>
-    <link href="../css/jquery.terminal.min.css" rel="stylesheet"/>
+    <script src="js/jquery.mousewheel-min.js"></script>
+    <script src="js/jquery.terminal.min.js"></script>
+    <link href="css/jquery.terminal.min.css" rel="stylesheet"/>
     <script src="https://unpkg.com/js-polyfills/keyboard.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
