--- a/tilda-demo.html
+++ b/tilda-demo.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <title>Quake like teminal - JQuery Terminal Emulator Demo</title>
   <meta name="Description" content="This is demonstration of JQuery Terminal Emulator Plugin. To run terminal type tilda on you keyboard."/>
-  <script src="../js/jquery-1.7.1.min.js"></script>
-  <script src="../js/jquery.mousewheel-min.js"></script>
-  <script src="../js/jquery.terminal.min.js"></script>
-  <link href="../css/jquery.terminal.css" rel="stylesheet"/>
+  <script src="js/jquery-1.7.1.min.js"></script>
+  <script src="js/jquery.mousewheel-min.js"></script>
+  <script src="js/jquery.terminal.min.js"></script>
+  <link href="css/jquery.terminal.css" rel="stylesheet"/>
   <script src="https://unpkg.com/js-polyfills/keyboard.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!--[if IE]>
